--- a/styles/main.css
+++ b/styles/main.css
@@ -706,6 +706,9 @@ h1, h2, h3 {
   color: var(--color-one);
   font-size: var(--step-6);
   text-align: center;
+  text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px #fff, 0 0 20px #ff1177,
+  0 0 35px #ff1177, 0 0 40px #ff1177, 0 0 50px #ff1177, 0 0 75px #ff1177;
+}
 }
 
 @-webkit-keyframes gradient {
